final fix chat details container overflow

--- a/src/ChatDetails/style.css
+++ b/src/ChatDetails/style.css
@@ -3,7 +3,7 @@
     display: flex;
     
     flex-direction: column;
-    height: calc(100% - 80px - 50px);
+    height: calc(90% - 80px - 50px);
     overflow: scroll;
     padding: 36px;
     background-color: lightgray;
